Add WIP ralph loop

--- a/config.json
+++ b/config.json
@@ -2,12 +2,16 @@
     "prd": "./prd.json",
     "progress": "./progress.txt",
     "prompt": "./prompt.txt",
+    "model": "claude-haiku-4.5",
     "maxIterations": 10,
     "tools": {
         "allow": [
-            "write",
-            "shell(git:*)"
+            "shell(git:*)",
+            "write"
         ],
-        "deny": []
-    }
+        "deny": [
+            "shell(git:push)"
+        ]
+    },
+    "loglevel": "debug"
 }
