Fix release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,7 @@ jobs:
       - name: Build binaries
         run: task build-all
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v6
-        with:
-          name: goralph-${{ github.ref_name }}
-          path: dist/
+      - name: Create release
+        run: gh release create ${{ github.ref_name }} ./dist/**/* --generate-notes --fail-on-no-commits
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
