--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,6 @@ jobs:
         run: task build-all
 
       - name: Create release
-        run: gh release create ${{ github.ref_name }} ./dist/*/*/ralph* --generate-notes --fail-on-no-commits
+        run: gh release create ${{ github.ref_name }} ./dist/ralph* --generate-notes --fail-on-no-commits
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
