--- a/templates/config.json
+++ b/templates/config.json
@@ -1,7 +1,7 @@
 {
     "prd": "./.ralph/prd.json",
     "progress": "./.ralph/progress.txt",
-    "prompt": "./.ralph/prompt.txt",
+    "prompt": "./.ralph/prompt.md",
     "model": "claude-haiku-4.5",
     "maxIterations": 10,
     "tools": {
