--- a/templates/config.json
+++ b/templates/config.json
@@ -3,7 +3,6 @@
     "progress": "./.ralph/progress.txt",
     "prompt": "./.ralph/prompt.md",
     "model": "claude-haiku-4.5",
-    "maxIterations": 10,
     "tools": {
         "allow": [
             "shell(git:*)",
@@ -13,5 +12,6 @@
             "shell(git:push)"
         ]
     },
-    "loglevel": "debug"
+    "timeout": 60,
+    "loglevel": "info"
 }
