--- a/templates/config.json
+++ b/templates/config.json
@@ -2,7 +2,7 @@
     "prd": "./.ralph/prd.json",
     "progress": "./.ralph/progress.txt",
     "prompt": "./.ralph/prompt.md",
-    "model": "claude-haiku-4.5",
+    "model": "claude-opus-4.5",
     "tools": {
         "allow": [
             "shell(git:*)",
